# loyal-solana

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json  pnpm-lock.yaml
programs-ecs/components/chat/: Cargo.toml
programs-ecs/components/chat/src/: lib.rs
programs-ecs/systems/inference-pay/: Cargo.toml
programs-ecs/systems/inference-pay/src/: lib.rs
programs/loyal/: Cargo.toml
programs/loyal-agent/: Cargo.toml
programs/loyal-agent/src/: lib.rs
programs/loyal-inference/: Cargo.toml
programs/loyal-inference/src/: lib.rs
programs/loyal-oracle/: Cargo.toml
programs/loyal-oracle/src/: lib.rs
programs/loyal/src/: lib.rs
tests/: loyal-inference.ts  loyal-oracle.ts  loyal.ts
