[package]
name = "loyal-oracle"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "loyal_oracle"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "^0", features = ["init-if-needed"] }
ephemeral-rollups-sdk = { version = "^0", features = ["anchor"] }
hkdf = { version = "0.12", default-features = false }
sha2 = { version = "0.10", default-features = false }